--- a/code/00_DataDownload.ipynb
+++ b/code/00_DataDownload.ipynb
@@ -158,7 +158,7 @@
    "source": [
     "# Please Download From:\n",
     "# https://wrds-www.wharton.upenn.edu/pages/get-data/financial-ratios-suite-wrds/\n",
-    "# and save to the following path: '../data/WRDS/compq.parquet'"
+    "# and save to the following path: '../data/WRDS/financial_ratio.dta'"
    ]
   },
   {
@@ -174,9 +174,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# WRDS: IBES/IBES Academic/Unadjusted Summary/Summary Statistics\n",
+    "# WRDS path: IBES/IBES Academic/Unadjusted Summary/Summary Statistics\n",
     "# Measures: EPS\n",
-    "# and save to the following path: '../data/WRDS/compq.parquet'"
+    "# and save to the following path: '../data/WRDS/EPS_summary.dta'"
    ]
   },
   {
@@ -192,10 +192,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# WRDS: IBES/IBES Academic/Unadjusted Detail/Actuals\n",
+    "# WRDS path: IBES/IBES Academic/Unadjusted Detail/Actuals\n",
     "# Measures: EPS\n",
     "# Periodicity: ANN/QTR\n",
-    "# and save to the following path: '../data/WRDS/compq.parquet'"
+    "# and save to the following path: '../data/WRDS/EPS_unadjusted_actual_full.dta'"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# WRDS:\n",
+    "# WRDS path: Linking Queries by WRDS/IBES CRSP Link (Beta)\n",
     "# and save to the following path: '../data/WRDS/iclink_WRDS.csv'"
    ]
   },
@@ -219,33 +219,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Other Data"
+    "# Other"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Anomalies Data:\n",
-    "#   File: '../data/Other/signed_predictors_dl_wide.csv'\n",
-    "#  download from Open Source Asset Pricing Website (https://www.openassetpricing.com/)\n",
-    "#  Version 1.3\n",
+    "## Publicly Available Data Provided in the Data Folder:\n",
+    "1. **Macro Variables**: RGDP, RCON, INDPROD, UNEMP  \n",
+    "   - **File**: `../data/Macro/XXXX.xlsx`  \n",
+    "   - **Source**: Federal Reserve Bank of Philadelphia  \n",
     "\n",
-    "# BHL Data:\n",
-    "#   File: '../data/Other/BHL.csv'\n",
-    "#   \n",
+    "2. **Factors**: Fama-French, HMXZ, SY, DHS  \n",
+    "   - **File**: `../data/Other/ff5_factors_m.csv`  \n",
+    "   - **Source**: Authors' websites  \n",
     "\n",
-    "## These data are pulicly available\n",
-    "# 1. Macro Variables: RGDP, RCON, INDPROD, UNEMP; \n",
-    "#   File: '../data/Macro/XXXX.xlsx'\n",
-    "#   download from Federal Reserve Bank of Philadelphia\n",
-    "# 2. Fama-French/HMXZ/SY/DHS Factors: \n",
-    "#   File: '../data/Other/ff5_factors_m.csv'\n",
-    "#   download from these authors' websites\n",
-    "# 3. FF49 Industry Classification:\n",
-    "#   File: '../data/Other/Siccodes49.csv'"
+    "3. **FF49 Industry Classification**  \n",
+    "   - **File**: `../data/Other/Siccodes49.csv`  \n",
+    "   - **Source**: Kenneth R. French's website  \n",
+    "  \n",
+    "## Publicly Available Data Not Provided:\n",
+    "- **Anomalies Data**:  \n",
+    "  - **File**: `../data/Other/signed_predictors_dl_wide.csv`  \n",
+    "  - **Source**: Open Source Asset Pricing (https://www.openassetpricing.com/)  \n",
+    "  - **Version**: 1.3  \n",
+    "\n",
+    "## Non-Public Data:\n",
+    "- **BHL Data**:  \n",
+    "  - **File**: `../data/Other/Conditional_Bias.csv`  \n",
+    "  - **Access**: Contact BHL directly for availability.  "
    ]
   }
  ],
