--- a/code/00_DataDownload.ipynb
+++ b/code/00_DataDownload.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -14,7 +23,7 @@
     "# Connect to WRDS #\n",
     "###################\n",
     "# Please enter your own username and password\n",
-    "conn = wrds.Connection(wrds_username='xxx')"
+    "conn = wrds.Connection(wrds_username='XXX')"
    ]
   },
   {
@@ -45,8 +54,8 @@
     "                      where a.date between '01/01/1980' and '12/31/2023'\n",
     "                      and b.exchcd between 1 and 3\n",
     "                      and b.shrcd between 10 and 11\n",
-    "                      \"\"\", \n",
-    "                      date_cols=['date']) \n",
+    "                      \"\"\",\n",
+    "                      date_cols=['date'])\n",
     "\n",
     "# change variable format to int\n",
     "crsp_m[['permco','permno','shrcd','exchcd']]=crsp_m[['permco','permno','shrcd','exchcd']].astype(int)\n",
@@ -89,7 +98,7 @@
     "                           a.ajex,\n",
     "                           a.sale, a.ao\n",
     "                    from comp.funda as a\n",
-    "                    where indfmt='INDL' \n",
+    "                    where indfmt='INDL'\n",
     "                    and datafmt='STD'\n",
     "                    and popsrc='D'\n",
     "                    and consol='C'\n",
@@ -147,6 +156,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# CCM link"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#######################\n",
+    "# CCM Block           #\n",
+    "#######################\n",
+    "ccm=conn.raw_sql(\"\"\"\n",
+    "                  select gvkey, lpermno as permno, linktype, linkprim,\n",
+    "                  linkdt, linkenddt\n",
+    "                  from crsp.ccmxpf_linktable\n",
+    "                  where substr(linktype,1,1)='L'\n",
+    "                  and (linkprim ='C' or linkprim='P')\n",
+    "                  \"\"\", date_cols=['linkdt', 'linkenddt'])\n",
+    "ccm.to_parquet('../data/WRDS/ccm.parquet')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Financial Ratio"
    ]
   },
@@ -176,7 +211,13 @@
    "source": [
     "# WRDS path: IBES/IBES Academic/Unadjusted Summary/Summary Statistics\n",
     "# Measures: EPS\n",
-    "# and save to the following path: '../data/WRDS/EPS_summary.dta'"
+    "# FPI: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9\n",
+    "# and save to the following path: '../data/WRDS/Forecast_EPS_summary_unadjusted_2023.dta'\n",
+    "\n",
+    "# We save the data into parquet for faster loading\n",
+    "# just run the following code:\n",
+    "# df = pd.read_stata('../data/WRDS/Forecast_EPS_summary_unadjusted_2023.dta')\n",
+    "# df.to_parquet('../data/WRDS/Forecast_EPS_summary_unadjusted_2023.parquet')"
    ]
   },
   {
@@ -192,10 +233,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1. IBES Detail Actual\n",
     "# WRDS path: IBES/IBES Academic/Unadjusted Detail/Actuals\n",
     "# Measures: EPS\n",
     "# Periodicity: ANN/QTR\n",
-    "# and save to the following path: '../data/WRDS/EPS_unadjusted_actual_full.dta'"
+    "# and save to the following path: '../data/WRDS/Actual_EPS_detail_unadjusted_2023.dta'\n",
+    "\n",
+    "# 2. IBES Summary Actual\n",
+    "# WRDS path: IBES/IBES Academic/Unadjusted Summary/Actuals, Pricing and Ancillary\n",
+    "# Measures: EPS\n",
+    "# and save to the following path: '../data/WRDS/Actual_EPS_summary_unadjusted_2023.dta'"
    ]
   },
   {
@@ -248,7 +295,7 @@
     "## Non-Public Data:\n",
     "- **BHL Data**:  \n",
     "  - **File**: `../data/Other/Conditional_Bias.csv`  \n",
-    "  - **Access**: Contact BHL directly for availability.  "
+    "  - **Access**: Please contact BHL for this data.  "
    ]
   }
  ],
