--- a/code/00_DataDownload.ipynb
+++ b/code/00_DataDownload.ipynb
@@ -23,7 +23,7 @@
     "# Connect to WRDS #\n",
     "###################\n",
     "# Please enter your own username and password\n",
-    "conn = wrds.Connection(wrds_username='XXX')"
+    "conn = wrds.Connection(wrds_username='XXXX')"
    ]
   },
   {
