--- a/code/06_DataShare.ipynb
+++ b/code/06_DataShare.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,11 +67,463 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "permno",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "YearMonth",
+         "rawType": "datetime64[ns]",
+         "type": "datetime"
+        },
+        {
+         "name": "RF_q1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "RF_q2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "RF_q3",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "RF_y1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "RF_y2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "OLS_EPS_Q1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "OLS_EPS_Q2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "OLS_EPS_Q3",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "OLS_EPS_Y1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "OLS_EPS_Y2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "PLS_EPS_Q1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "PLS_EPS_Q2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "PLS_EPS_Q3",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "PLS_EPS_Y1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "PLS_EPS_Y2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "LASSO_EPS_Q1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "LASSO_EPS_Q2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "LASSO_EPS_Q3",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "LASSO_EPS_Y1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "LASSO_EPS_Y2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "ENet_EPS_Q1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "ENet_EPS_Q2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "ENet_EPS_Q3",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "ENet_EPS_Y1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "ENet_EPS_Y2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "RF_EPS_Q1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "RF_EPS_Q2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "RF_EPS_Q3",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "RF_EPS_Y1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "RF_EPS_Y2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "LGBM_EPS_Q1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "LGBM_EPS_Q2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "LGBM_EPS_Q3",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "LGBM_EPS_Y1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "LGBM_EPS_Y2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Composite_EPS_Q1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Composite_EPS_Q2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Composite_EPS_Q3",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Composite_EPS_Y1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Composite_EPS_Y2",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "f756ced0-5df4-4bd2-898e-0943a27ae496",
+       "rows": [
+        [
+         "0",
+         "10015.0",
+         "1986-01-31 00:00:00",
+         null,
+         null,
+         null,
+         "0.49843865435349927",
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "1",
+         "10057.0",
+         "1986-01-31 00:00:00",
+         null,
+         "0.053901564753037805",
+         "0.09437144688481647",
+         "0.634142368504043",
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "2",
+         "10137.0",
+         "1986-01-31 00:00:00",
+         null,
+         "0.9968590216307059",
+         "0.7172978064739818",
+         null,
+         "3.8033429767315243",
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "3",
+         "10145.0",
+         "1986-01-31 00:00:00",
+         "0.4620890643941777",
+         "0.771296146156635",
+         "0.8690427189988639",
+         "3.9403022183281147",
+         "3.807993268870117",
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "4",
+         "10153.0",
+         "1986-01-31 00:00:00",
+         null,
+         "-0.8546745427663563",
+         "-0.7169338763087258",
+         null,
+         "-1.3369523287085563",
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null
+        ]
+       ],
+       "shape": {
+        "columns": 42,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -117,13 +569,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10145.0</td>\n",
+       "      <td>10015.0</td>\n",
        "      <td>1986-01-31</td>\n",
-       "      <td>0.461128</td>\n",
-       "      <td>0.845789</td>\n",
-       "      <td>0.918713</td>\n",
-       "      <td>3.939979</td>\n",
-       "      <td>3.758229</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.498439</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -141,13 +593,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10429.0</td>\n",
+       "      <td>10057.0</td>\n",
        "      <td>1986-01-31</td>\n",
-       "      <td>0.108971</td>\n",
-       "      <td>0.145748</td>\n",
-       "      <td>0.126904</td>\n",
-       "      <td>0.412864</td>\n",
-       "      <td>0.326725</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.053902</td>\n",
+       "      <td>0.094371</td>\n",
+       "      <td>0.634142</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -165,13 +617,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>10460.0</td>\n",
+       "      <td>10137.0</td>\n",
        "      <td>1986-01-31</td>\n",
-       "      <td>0.390404</td>\n",
-       "      <td>0.454392</td>\n",
-       "      <td>0.418953</td>\n",
-       "      <td>1.580292</td>\n",
-       "      <td>1.612757</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.996859</td>\n",
+       "      <td>0.717298</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.803343</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -189,13 +641,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10516.0</td>\n",
+       "      <td>10145.0</td>\n",
        "      <td>1986-01-31</td>\n",
-       "      <td>0.354938</td>\n",
-       "      <td>0.523037</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.064070</td>\n",
-       "      <td>1.880264</td>\n",
+       "      <td>0.462089</td>\n",
+       "      <td>0.771296</td>\n",
+       "      <td>0.869043</td>\n",
+       "      <td>3.940302</td>\n",
+       "      <td>3.807993</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -213,13 +665,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>10743.0</td>\n",
+       "      <td>10153.0</td>\n",
        "      <td>1986-01-31</td>\n",
-       "      <td>0.120350</td>\n",
-       "      <td>0.175456</td>\n",
-       "      <td>0.160633</td>\n",
-       "      <td>0.910364</td>\n",
-       "      <td>0.608926</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.854675</td>\n",
+       "      <td>-0.716934</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.336952</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -242,11 +694,11 @@
       ],
       "text/plain": [
        "    permno  YearMonth     RF_q1     RF_q2     RF_q3     RF_y1     RF_y2  \\\n",
-       "0  10145.0 1986-01-31  0.461128  0.845789  0.918713  3.939979  3.758229   \n",
-       "1  10429.0 1986-01-31  0.108971  0.145748  0.126904  0.412864  0.326725   \n",
-       "2  10460.0 1986-01-31  0.390404  0.454392  0.418953  1.580292  1.612757   \n",
-       "3  10516.0 1986-01-31  0.354938  0.523037       NaN  2.064070  1.880264   \n",
-       "4  10743.0 1986-01-31  0.120350  0.175456  0.160633  0.910364  0.608926   \n",
+       "0  10015.0 1986-01-31       NaN       NaN       NaN  0.498439       NaN   \n",
+       "1  10057.0 1986-01-31       NaN  0.053902  0.094371  0.634142       NaN   \n",
+       "2  10137.0 1986-01-31       NaN  0.996859  0.717298       NaN  3.803343   \n",
+       "3  10145.0 1986-01-31  0.462089  0.771296  0.869043  3.940302  3.807993   \n",
+       "4  10153.0 1986-01-31       NaN -0.854675 -0.716934       NaN -1.336952   \n",
        "\n",
        "   OLS_EPS_Q1  OLS_EPS_Q2  OLS_EPS_Q3  ...  LGBM_EPS_Q1  LGBM_EPS_Q2  \\\n",
        "0         NaN         NaN         NaN  ...          NaN          NaN   \n",
@@ -272,7 +724,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,12 +735,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "forecast_all.to_csv('../data/Results/Look_Ahead_Bias_Free_Earnings_Forecast.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
